# NumPlot

./: .gitignore  .gitmodules  CMakeLists.txt  start.sh
.cache/clangd/index/: Logger.cpp.C8C7B750E06C984E.idx  Logger.h.F5081283780BC56C.idx  NPlot.h.D1638CAD4D3BD84F.idx  Scene.cpp.62DDB16BE1F13DC9.idx  Scene.h.B1C9F743161498DD.idx  Window.cpp.1C09D3B2918B6F21.idx  Window.h.0BC1175FB6FD7432.idx  _fixes.hpp.B3A9CF9B5BB40990.idx  _vectorize.hpp.591950B51E478206.idx  ansicolor_sink-inl.h.BEF1799E0EF343BB.idx  ansicolor_sink.h.83A5DB44FB05F74E.idx  async.cpp.0846D57F362FE946.idx  async.h.87B577B6956D125F.idx  async_logger-inl.h.2C025D5B49AEB996.idx  async_logger.h.E7E791D2F30B1D7D.idx  backtracer-inl.h.6590C04380C06253.idx  backtracer.h.5830D426D3FC6253.idx  base_sink-inl.h.A72891E774845119.idx  base_sink.h.83ADD406CCC5B9AB.idx  basic_file_sink-inl.h.C7474903618BA705.idx  basic_file_sink.h.D6706FB5CB9A4E0D.idx  bundled_fmtlib_format.cpp.CC8DF7C89C2D2A1E.idx  cfg.cpp.A3CF29EE59685C2C.idx  circular_q.h.4426A01CB0962ED2.idx  common.h.C6D50A4ADFB492DD.idx  (+270 more)
libs/: CMakeLists.txt
libs/myglad/: CMakeLists.txt
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/NPlot/: NPlot.h  nplotpch.h
src/NPlot/Assets/: default.fs  default.vs
src/NPlot/Events/: Event.h  ImplEvent.h
src/NPlot/Renderer/: Buffer.h  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h  VertexBuffer.cpp  VertexBuffer.h  Window.cpp  Window.h
src/NPlot/Scene/: Scene.cpp  Scene.h
src/NPlot/Utils/: Logger.cpp  Logger.h  macros.h
(+2 files in other folders)
